# Googology

./: .gitignore  README.md  _CoqProject  coq-googology.opam
.github/workflows/: coq-ci.yml  makefile.yml
Example/: FGH_subOmega.v
Function/: FGH.v
Ordinal/: Arithmetic.v  EpsilonNumbers.v  ExtendedVeblenFunction.v  Iteration.v  OmegaAryVeblenFunction.v  Operation.v  Ord.v  Recursion.v  Tetration.v  TransfiniteVeblenFunction.v  TransfiniteVeblenFunction_omega.v  VeblenFunction.v  WellFormed.v
